--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ window.addEventListener("scroll", function(){
   	 		<div class="footer-col">
   	 			<h4 class="HighlightText">follow us</h4>
   	 			<div class="social-links">
-  	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
+  	 				<a href="https://www.facebook.com/STRT-Official-112101144626123"><i class="fab fa-facebook-f"></i></a>
   	 				<a href="#"><i class="fab fa-twitter"></i></a>
   	 				<a href="#"><i class="fab fa-instagram"></i></a>
   	 				<a href="#"><i class="fab fa-linkedin-in"></i></a>
