--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ window.addEventListener("scroll", function(){
   	 			<div class="social-links">
   	 				<a href="https://www.facebook.com/STRT-Official-112101144626123"><i class="fab fa-facebook-f"></i></a>
   	 				<a href="#"><i class="fab fa-twitter"></i></a>
-  	 				<a href="#"><i class="fab fa-instagram"></i></a>
+  	 				<a href="https://www.instagram.com/strtofficial117/"><i class="fab fa-instagram"></i></a>
   	 				<a href="#"><i class="fab fa-linkedin-in"></i></a>
   	 			</div>
   	 		</div>
