--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <ul>
     <li class="NavBar-Home"><a href="#">Home</a></li>
     <li class="NavBar-About"><a href="#">About</a></li>
-    <li class="NavBar-Services"><a href="#">Services</a></li>
+    <li class="NavBar-Services"><a href="#">Donate</a></li>
     <li class="NavBar-Contact"><a href="#">Contact</a></li>
   </ul>
 </header>
