--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ window.addEventListener("scroll", function(){
 <script src="script.js"></script>
 <link rel="stylesheet" href="CSS/aos.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-<link rel="icon" href="https://raw.githubusercontent.com/STRT-Official/storage-plant/main/STRT.jpg" type="image/icon type">
+<link rel="icon" href="https://raw.githubusercontent.com/STRT-Official/storage-plant/main/STRT.jpg" type="image/x-icon">
 
 <title>StRt - StRt Home</title>
 
